<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_fall_detected"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_animation"
    android:fitsSystemWindows="true"
    tools:context=".FallDetectedActivity">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:orientation="vertical">

        <TextView
            fontPath="fonts/ubuntu_bold.ttf"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="@dimen/secondary"
            android:gravity="center"
            android:lineSpacingExtra="@dimen/mini"
            android:text="@string/txt_did_you_fall"
            android:textColor="@color/white_90"
            android:textSize="@dimen/medium_txt"
            tools:ignore="MissingPrefix" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginEnd="@dimen/secondary"
            android:layout_marginStart="@dimen/secondary"
            android:gravity="center"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btn_no"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/primary"
                android:layout_weight="1"
                android:background="@drawable/bg_trans_stroke_white"
                android:text="@string/btn_no"
                android:textAllCaps="false"
                android:textColor="@color/white_cc" />

            <Button
                android:id="@+id/btn_yes"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/primary"
                android:layout_weight="1"
                android:background="@drawable/bg_trans_stroke_white"
                android:text="@string/btn_yes"
                android:textAllCaps="false"
                android:textColor="@color/white_cc" />

        </LinearLayout>

    </LinearLayout>

    <TextView
        android:id="@+id/txt_alert"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|center_horizontal"
        android:layout_margin="@dimen/primary"
        android:gravity="center"
        android:lineSpacingExtra="@dimen/mini"
        android:text="@string/format_alert"
        android:textColor="@color/white_90"
        android:textSize="@dimen/small_txt" />

</android.support.design.widget.CoordinatorLayout>