<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_sign_in"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_animation"
    android:fitsSystemWindows="true"
    tools:context=".SignInActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center"
        android:layout_margin="@dimen/secondary"
        android:gravity="center"
        android:orientation="vertical">

        <ImageView
            android:layout_width="220dp"
            android:layout_height="250dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="80dp"
            android:background="@drawable/bk" />

        <android.support.design.widget.TextInputEditText
            android:id="@+id/input_phone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/duplex"
            android:background="@color/white_10"
            android:hint="@string/hint_phone"
            android:inputType="number"
            android:maxLength="10"
            android:padding="@dimen/primary"
            android:textColor="@color/white_cc"
            android:textColorHint="@color/white_90"
            android:textCursorDrawable="@null"
            android:textSize="@dimen/small_txt" />

        <android.support.design.widget.TextInputEditText
            android:id="@+id/input_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/duplex"
            android:background="@color/white_10"
            android:fontFamily="sans-serif"
            android:hint="@string/hint_password"
            android:inputType="textPassword"
            android:padding="@dimen/primary"
            android:textColor="@color/white_cc"
            android:textColorHint="@color/white_90"
            android:textCursorDrawable="@null"
            android:textSize="@dimen/small_txt" />

        <Button
            android:id="@+id/btn_sign_in"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/duplex"
            android:layout_marginTop="@dimen/primary"
            android:layout_marginEnd="@dimen/duplex"
            android:background="@drawable/bg_trans_stroke_white"
            android:text="@string/btn_sign_in"
            android:textAllCaps="false"
            android:textColor="@color/white_cc" />

    </LinearLayout>

</android.support.design.widget.CoordinatorLayout>
